3 Apr 2006: Wouter
	- Added buffer length check to internal ipc.

31 Mar 2006: Wouter
	- zone type has a pointer to zone options.
	- nsd options has an rbtree to find zone options in.
	- nsd checks acl for incoming notifies and replies
	  error or confirmation.
	- nicer layout in options.c.
	- updated makefile dependencies.
	- fixed sz for SOA_INFO ipc, which was too small.
	- notify is sent to server_main, server_main sends it to xfrd.

30 Mar 2006: Wouter
	- include: documented in manual page.
	- MAXINCLUDES define in one place (config.h).
	- configure checks for strptime in include files.
	- use %d instead of %zd (sparc5 machine does not get zd).
	- use region_strdup in configlexer.
	- added a check for EINVAL in dispatch - will abort
	  on the error instead of busy hang.

29 Mar 2006: Wouter
	- \r for config lexer. (similar changes to zonelexer).
	- forward port of fix to 2_2 branch:
	  short int in var_arg is promoted to int, according to B. Laurie.
	  The same logic for %o, %d %x would hold for %u I think.
	- in XFRD, soa prim_ns and email domain names are kept in a max
	  size buffer.
	- split up dname_parse into parse from string to wireformat
	  and parse from wireformat to memoryformat, so both can be called.
	- split up dname_make_from_packet into reading the wireformat
	  from the packet and the dname_make, so both can be called.
	- xfrd reads all soa info from incoming xfr packets.
	- xfrd will ignore TC bit on tcp channels.
	- nsd sends xfrd all soa info, including ttl and dnames.
	- config file now has an include: filename directive.

28 Mar 2006: Miek
	- forward port fixes for zone compiler and \r. svn:1926-1927
	- add DO bit MASK and remove the !! construct

17 Mar 2006: Wouter
	- according to axfr-clarify, added comments that we check
	  more leniently on further responses on a TCP stream.

16 Mar 2006: Wouter
	- Fixed up SOA INFO Send routines. Send from server works.
	- niced up xfrd state file.